--- a/intro-to-causal-inference.ipynb
+++ b/intro-to-causal-inference.ipynb
@@ -8,10 +8,208 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Randomized Control Trials (A/B Testing)"
+    "## Correlation Does Not Necessarily Imply Causation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def risk(sample_size=10000):\n",
+    "    \"\"\"\n",
+    "      We generate two types of people: High risk vs. Low-risk people. \n",
+    "      Risk, for example, could be in relation to dropping out of high school.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return np.random.binomial(n=1, p=0.3, size=sample_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tutoring(riskiness, proba_tutor_given_not_risky=0.1, proba_tutor_given_risky=0.9):\n",
+    "    \"\"\"\n",
+    "        Non-risky people (riskiness == 0) have a 10% chance of receiving a tutoring.\n",
+    "        However, risky people have a 90% chance of receiving the tutoring.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    probability_of_receiving_tutoring = \\\n",
+    "        (riskiness == 0) * proba_tutor_given_not_risky + \\\n",
+    "        (riskiness == 1) * proba_tutor_given_risky\n",
+    "    \n",
+    "    return np.random.binomial(n=1, p=probability_of_receiving_tutoring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def graduate(riskiness, tutored):\n",
+    "    \"\"\"\n",
+    "        If risky and tutoring, graduation rate = 0.3\n",
+    "        If risky and not tutoring, graduation rate = 0.2\n",
+    "        If not-risky and tutoring, graduation rate = 0.9\n",
+    "        If not-risky and not tutoring, graduation rate = 0.8\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    risky_and_tutored_grad_rate = 0.3\n",
+    "    risky_and_not_tutored_grad_rate = 0.2\n",
+    "    not_risky_and_tutored_grad_rate = 0.9\n",
+    "    not_risky_and_not_tutored_grad_rate = 0.8\n",
+    "    \n",
+    "    graduation_probas = (riskiness == 1) * (tutored == 1) * risky_and_tutored_grad_rate + \\\n",
+    "        (riskiness == 1) * (tutored == 0) * risky_and_not_tutored_grad_rate + \\\n",
+    "        (riskiness == 0) * (tutored == 1) * not_risky_and_tutored_grad_rate + \\\n",
+    "        (riskiness == 0) * (tutored == 0) * not_risky_and_not_tutored_grad_rate\n",
+    "    \n",
+    "    return np.random.binomial(n=1, p=graduation_probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "riskiness = risk()\n",
+    "tutored = drug(riskiness)\n",
+    "graduated = graduate(riskiness, tutored)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    'risk': riskiness,\n",
+    "    'tutored': tutored,\n",
+    "    'graduated': graduated\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5032854709174982"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['tutored'] == 1].graduated.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7706671193345782"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['tutored'] == 0].graduated.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Associated Risk Difference: $P(G=1 \\mid T=1) - P(G=0 \\mid T=0) = -26.7\\%$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.26738164841708"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['tutored'] == 1].graduated.mean() - df[df['tutored'] == 0].graduated.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Randomized Control Trials (A/B Testing)\n",
+    "\n",
+    "Pros:\n",
+    "- The only thing that's different between the treatment group and the control group is the presence or lack of treatment. Therefore, the difference in outcomes between the two could be attributed to the treatment!\n",
+    "- Good [*internal validity*](https://en.wikipedia.org/wiki/Internal_validity).\n",
+    "- Easy to understand, easy to interpret.\n",
+    "\n",
+    "Fig 1: Treatment Group in RCT (one square = 100k of that animal)\n",
+    "\n",
+    "|*|*|*|\n",
+    "|-|-|-|\n",
+    "| ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) |\n",
+    "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
+    "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
+    "\n",
+    "Fig 2: Control Group in RCT (one square = 100k of that animal)\n",
+    "\n",
+    "|*|*|*|\n",
+    "|-|-|-|\n",
+    "| ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) |\n",
+    "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
+    "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
+    "\n",
+    "\n",
+    "Cons: \n",
+    "\n",
+    "- Might be unethical / really expensive.\n",
+    "- Still susceptible to Selection Bias.\n",
+    "- Questionable transportability: (e.g. RCT on mice. Would the results of that study be applicable to humans?)\n"
    ]
   },
   {
