--- a/intro-to-causal-inference.ipynb
+++ b/intro-to-causal-inference.ipynb
@@ -22,12 +22,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correlation Does Not Necessarily Imply Causation"
+    "Why Study Causal Inference? \n",
+    "- What are some mistakes that could happen if we do a naive analysis?\n",
+    "  - Confounding example\n",
+    "  - The definition of the do-operator\n",
+    "\n",
+    "RCTs\n",
+    "    To find causal effects, one could randomize the treatment assignment. \n",
+    "\n",
+    "Chain\n",
+    "\n",
+    "Fork\n",
+    "\n",
+    "Collider\n",
+    "\n",
+    "Descendant of a collider\n",
+    "\n",
+    "\n",
+    "\n",
+    "Backdoor Criterion - \n",
+    "  - When is seeing = doing?\n",
+    "  - assumes you know the structure of the problem well enough\n",
+    "  \n",
+    "do-calculus\n",
+    "\n",
+    "Frontdoor Criterion\n",
+    "  - lets us deal with partial knowledge of the graph / unmeasured variables\n",
+    "  \n",
+    "Crazy example\n",
+    "\n",
+    "Transportability\n",
+    "\n",
+    "Resources\n",
+    "\n",
+    "Book Club"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hypothetical Scenario"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to improve students' graduation rates. Let's say we have some treatment T and we're trying to analyze the efficacy of treatment T. We find that on average, the graduation rates of those who get treatment T are 26 percentage points worse than those who didn't get treatment T. In other words,\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    P(G=1 \\mid T=1) - P(G=0 \\mid T=0) \\approx -26\\%\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "### Question:\n",
+    "Should we recommend treatment T to students?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answer:\n",
+    "\n",
+    "It depends on the data-generating mechanism!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Correlation Does Not Necessarily Imply Causation\n",
+    "Here's an example where looking at associations naively leads to the wrong conclusion. \n",
+    "\n",
+    "Treatment is negatively associated with graduation rate, even though the treatment is actually beneficial, on average!\n",
+    "\n",
+    "How could that be? Let's say in a hypothetical world, there are only three variables that matter: treatment $T$, graduation rate $G$. Students classified as \"at-risk\" $R$ are more likely to be sent to receive tutoring. At-risk students by definition are less likely to graduate. In other words, $R$ is a common cause of $T$ and $G$. Another way to say that is $T$ and $G$ are **confounded** by $R$. So if there's a lot of people at-risk who receive treatment, then it is quite possible that there is a negative association between the treatment and outcome, *even though the treatment actually improves the outcomes for most/all individuals*.\n",
+    "\n",
+    "![Risk is a common cause of treatment and graduation](./img/risk-tutoring-graduate.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confounding Example Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_size = 1000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +165,8 @@
     "        If risky and not tutoring, graduation rate = 0.2\n",
     "        If not-risky and tutoring, graduation rate = 0.9\n",
     "        If not-risky and not tutoring, graduation rate = 0.8\n",
+    "        \n",
+    "        Notice that tutoring increases graduation rates by 10 percentage points.\n",
     "    \"\"\"\n",
     "    \n",
     "    risky_and_tutored_grad_rate = 0.3\n",
@@ -88,18 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "riskiness = risk()\n",
+    "riskiness = risk(sample_size)\n",
     "tutored = drug(riskiness)\n",
     "graduated = graduate(riskiness, tutored)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,70 +207,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5032854709174982"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df[df['tutored'] == 1].graduated.mean()"
+    "Associated Risk Difference: $P(G=1 \\mid T=1) - P(G=0 \\mid T=0) \\approx -26\\%$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7706671193345782"
+       "-0.26"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['tutored'] == 0].graduated.mean()"
+    "round(\n",
+    "    df[df['tutored'] == 1].graduated.mean() - df[df['tutored'] == 0].graduated.mean(),\n",
+    "    2\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Associated Risk Difference: $P(G=1 \\mid T=1) - P(G=0 \\mid T=0) = -26.7\\%$"
+    "However, if we do a randomized control trial (i.e. we randomize the assignment of the treatment), we see that the treatment actually improves the outcomes by 10%, on average!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.26738164841708"
+       "0.1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['tutored'] == 1].graduated.mean() - df[df['tutored'] == 0].graduated.mean()"
+    "# Ri\n",
+    "treated_sample = risk(sample_size)\n",
+    "untreated_sample = risk(sample_size)\n",
+    "\n",
+    "round(\n",
+    "    graduate(treated_sample, tutored=1).mean() - graduate(untreated_sample, tutored=0).mean(),\n",
+    "    2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Causal Risk Difference: $P(G=1 \\mid do(T=1)) - P(G=0 \\mid do(T=0)) = 10\\%$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we were to only look at the associated risk difference (i.e. make a comparison of graduation rates of those who got treated vs. those who didn't get treated), we would erroneously conclude that the treatment, on average, is bad (i.e. decreases graduation rate by 26%), **but in actuality, it boosts graduation rate, on average, by 10 percentage points!**"
    ]
   },
   {
@@ -182,6 +289,7 @@
    "metadata": {},
    "source": [
     "## Randomized Control Trials (A/B Testing)\n",
+    "\n",
     "\n",
     "Pros:\n",
     "- The only thing that's different between the treatment group and the control group is the presence or lack of treatment. Therefore, the difference in outcomes between the two could be attributed to the treatment!\n",
