add colliders example

--- a/intro-to-causal-inference.ipynb
+++ b/intro-to-causal-inference.ipynb
@@ -38,14 +38,15 @@
     "\n",
     "Descendant of a collider\n",
     "\n",
-    "\n",
-    "\n",
     "Backdoor Criterion - \n",
     "  - When is seeing = doing?\n",
     "  - assumes you know the structure of the problem well enough\n",
     "  \n",
     "do-calculus\n",
     "\n",
+    "Adjustment Formula\n",
+    "  - derivation\n",
+    "  \n",
     "Frontdoor Criterion\n",
     "  - lets us deal with partial knowledge of the graph / unmeasured variables\n",
     "  \n",
@@ -62,17 +63,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hypothetical Scenario"
+    "## Causality is Ubiquitous\n",
+    "\n",
+    "A lot of interesting questions are **causal** questions.\n",
+    "\n",
+    "Epidemiology: I heard vaping is killing people. A friend of mine vapes. Should he switch back to smoking?\n",
+    "\n",
+    "Economics: What would happen to our economy if we increase taxes?\n",
+    "\n",
+    "Software Engineering: What code is *slowing down* our application?\n",
+    "\n",
+    "Marketing: What changes on our website would increase visits of Marketing Qualified Leads?\n",
+    "\n",
+    "Education: What interventions are *increasing* graduation rates of high school students?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to improve students' graduation rates. Let's say we have some treatment T and we're trying to analyze the efficacy of treatment T. We find that on average, the graduation rates of those who get treatment T are 26 percentage points worse than those who didn't get treatment T. In other words,\n",
+    "### Hypothetical Scenario\n",
+    "\n",
+    "We want to improve students' graduation rates. Let's say we have some treatment T and we're trying to analyze the efficacy of treatment T. We find that on average, the graduation rates of those who get treatment T are 31 percentage points *worse* than those who didn't get treatment T. In other words,\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
-    "    P(G=1 \\mid T=1) - P(G=0 \\mid T=0) \\approx -26\\%\n",
+    "    P(G=1 \\mid T=1) - P(G=0 \\mid T=0) \\approx -31\\%\n",
     "\\end{aligned}\n",
     "\\end{equation}\n",
     "\n",
@@ -96,10 +111,12 @@
     "## Correlation Does Not Necessarily Imply Causation\n",
     "Here's an example where looking at associations naively leads to the wrong conclusion. \n",
     "\n",
-    "Treatment is negatively associated with graduation rate, even though the treatment is actually beneficial, on average!\n",
+    "Below is an example where treatment is negatively associated with graduation rate, even though the treatment is actually beneficial, on average!\n",
     "\n",
     "How could that be? Let's say in a hypothetical world, there are only three variables that matter: treatment $T$, graduation rate $G$. Students classified as \"at-risk\" $R$ are more likely to be sent to receive tutoring. At-risk students by definition are less likely to graduate. In other words, $R$ is a common cause of $T$ and $G$. Another way to say that is $T$ and $G$ are **confounded** by $R$. So if there's a lot of people at-risk who receive treatment, then it is quite possible that there is a negative association between the treatment and outcome, *even though the treatment actually improves the outcomes for most/all individuals*.\n",
     "\n",
+    "| Risk confounds Tutoring and Graduate |\n",
+    "| - |\n",
     "![Risk is a common cause of treatment and graduation](./img/risk-tutoring-graduate.png)"
    ]
   },
@@ -127,7 +144,7 @@
    "source": [
     "def risk(sample_size=10000):\n",
     "    \"\"\"\n",
-    "      We generate two types of people: High risk vs. Low-risk people. \n",
+    "      We generate two types of people: At-risk vs. Not at-risk. \n",
     "      Risk, for example, could be in relation to dropping out of high school.\n",
     "    \"\"\"\n",
     "    \n",
@@ -155,24 +172,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def graduate(riskiness, tutored):\n",
     "    \"\"\"\n",
+    "        Tutoring increases graduation rates by 10 percentage points.\n",
+    "        \n",
     "        If risky and tutoring, graduation rate = 0.3\n",
     "        If risky and not tutoring, graduation rate = 0.2\n",
     "        If not-risky and tutoring, graduation rate = 0.9\n",
     "        If not-risky and not tutoring, graduation rate = 0.8\n",
     "        \n",
-    "        Notice that tutoring increases graduation rates by 10 percentage points.\n",
     "    \"\"\"\n",
     "    \n",
     "    risky_and_tutored_grad_rate = 0.3\n",
     "    risky_and_not_tutored_grad_rate = 0.2\n",
     "    not_risky_and_tutored_grad_rate = 0.9\n",
-    "    not_risky_and_not_tutored_grad_rate = 0.8\n",
+    "    not_risky_and_not_tutored_grad_rate = 0.85\n",
     "    \n",
     "    graduation_probas = (riskiness == 1) * (tutored == 1) * risky_and_tutored_grad_rate + \\\n",
     "        (riskiness == 1) * (tutored == 0) * risky_and_not_tutored_grad_rate + \\\n",
@@ -184,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,21 +228,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Associated Risk Difference: $P(G=1 \\mid T=1) - P(G=0 \\mid T=0) \\approx -26\\%$"
+    "Associated Risk Difference: $P(G=1 \\mid T=1) - P(G=0 \\mid T=0) \\approx -31\\%$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.26"
+       "-0.31"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,27 +258,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, if we do a randomized control trial (i.e. we randomize the assignment of the treatment), we see that the treatment actually improves the outcomes by 10%, on average!"
+    "However, if we do a randomized control trial (i.e. we randomize the assignment of the treatment), we see that the treatment actually improves the outcomes by 6%, on average!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1"
+       "0.06"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Ri\n",
+    "# We generate a population with roughly the same percentage of at-risk kids\n",
     "treated_sample = risk(sample_size)\n",
     "untreated_sample = risk(sample_size)\n",
     "\n",
@@ -274,14 +292,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Causal Risk Difference: $P(G=1 \\mid do(T=1)) - P(G=0 \\mid do(T=0)) = 10\\%$"
+    "Causal Risk Difference: RCT of graduation rates given treated minus graduation rates given untreated = $6\\%$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we were to only look at the associated risk difference (i.e. make a comparison of graduation rates of those who got treated vs. those who didn't get treated), we would erroneously conclude that the treatment, on average, is bad (i.e. decreases graduation rate by 26%), **but in actuality, it boosts graduation rate, on average, by 10 percentage points!**"
+    "If we were to only look at the associated risk difference (i.e. make a comparison of graduation rates of those who got treated vs. those who didn't get treated), we would erroneously conclude that the treatment, on average, is bad (i.e. decreases graduation rate by 31%), **but in actuality, it boosts graduation rate, on average, by 6 percentage points!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The meaning of the *do*-operator\n",
+    "\n",
+    "Now we introduce the $do$-notation. $do(T=t)$ means we force the variable $T$ for the population of interest to be set to $t$ in an idealized way. When we $do(T=t)$, $T$ stops listening to other variables (i.e. becomes *exogenous*) and is set to $t$. \n",
+    "\n",
+    "Graphically, we can represent $do(T=t)$ as removing the arrow from $R$ to $T$:\n",
+    "\n",
+    "| $do(T=t)$ removes arrow from R to T |\n",
+    "|-|\n",
+    "| ![Graph like above, but R no longer has an arrow to T](./img/rct-tutoring-graduate.png) |"
    ]
   },
   {
@@ -290,21 +323,24 @@
    "source": [
     "## Randomized Control Trials (A/B Testing)\n",
     "\n",
+    "One way to compute the average causal effect in the example above is to get two random samples of the treatment, assign one of them to the treatment, and then not assign the other. We could then subtract the means of each group. In our example above, the causal risk difference, a measure of causal effect, is computed as follows:\n",
     "\n",
-    "Pros:\n",
-    "- The only thing that's different between the treatment group and the control group is the presence or lack of treatment. Therefore, the difference in outcomes between the two could be attributed to the treatment!\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    \\text{CRD} &= P(G=1 \\mid do(T=1)) - P(G=1 \\mid do(T=0))\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "As we can see from above, the results of $P(G=1 \\mid do(T=t))$ can be different from $P(G=1 \\mid T=t)$, which is just another way of saying that correlation (positive, zero, or negative) does not necessarily imply causation.\n",
+    "\n",
+    "\n",
+    "### Pros:\n",
+    "- Removes confounding on treatment. *Nice especially when there are a lot of confounding variables*.\n",
+    "- Assuming that all the people in the beginning of the study are still available at the end of the study (i.e. no selection bias), the only thing that's different between the treatment group and the control group is the presence or lack of treatment. Therefore, the difference in outcomes between the two could be attributed to the treatment!\n",
     "- Good [*internal validity*](https://en.wikipedia.org/wiki/Internal_validity).\n",
-    "- Easy to understand, easy to interpret.\n",
+    "- Results are generally easy to understand, easy to interpret.\n",
     "\n",
-    "Fig 1: Treatment Group in RCT (one square = 100k of that animal)\n",
-    "\n",
-    "|*|*|*|\n",
-    "|-|-|-|\n",
-    "| ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) |\n",
-    "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
-    "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
-    "\n",
-    "Fig 2: Control Group in RCT (one square = 100k of that animal)\n",
+    "Fig 1: Treatment Group in RCT (one square = 100k of that animal), assuming no selection bias. Dog='At Risk', Cat='Not At Risk'\n",
     "\n",
     "|*|*|*|\n",
     "|-|-|-|\n",
@@ -312,40 +348,126 @@
     "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
     "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
     "\n",
+    "Fig 2: Control Group in RCT (one square = 100k of that animal), assuming no selection bias. Dog='At Risk', Cat='Not At Risk'\n",
     "\n",
-    "Cons: \n",
+    "|*|*|*|\n",
+    "|-|-|-|\n",
+    "| ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) |\n",
+    "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |\n",
+    "| ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) | ![Apple-dog](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/dog-face_1f436.png) | ![Apple-cat](https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/225/cat_1f408.png) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cons\n",
     "\n",
-    "- Might be unethical / really expensive.\n",
+    "- Might be unethical / really expensive (e.g. assessing the effect of smoking on cancer in the 70s).\n",
+    "\n",
+    "| * |\n",
+    "| - |\n",
+    "| ![Image of lungs and a lit cigarette](http://a360-wp-uploads.s3.amazonaws.com/wp-content/uploads/rtmagazi/2015/09/dreamstime_xs_58648955-399x350.jpg) |\n",
+    "\n",
     "- Still susceptible to Selection Bias.\n",
-    "- Questionable transportability: (e.g. RCT on mice. Would the results of that study be applicable to humans?)\n"
+    "\n",
+    "| Success Academy Alleged Bias | Corresponding Diagram |\n",
+    "| - | - |\n",
+    "| ![NYTimes: Filing Alleges Bias at Success Academy Network Against Students With Disabilities](./img/success-academy-bias.png) | ![Risk points to Transfer variable, which is adjusted for](./img/transfer-selection-bias.png) | \n",
+    "\n",
+    "Example: If Tutoring is randomized, but we only have access to data of students who *didn't* transfer, then our results could be biased.\n",
+    "\n",
+    "In other words, when analyzing the results of the randomized control trial, that gives us $P(G=1 \\mid do(T=1), Tr=0) - P(G=1 \\mid do(T=0), Tr=0)$, which could be different from our target quantity $P(G=1 \\mid do(T=1)) - P(G=1 \\mid do(T=0))$.\n",
+    "\n",
+    "- Questionable transportability: (e.g. RCT on mice. Would the results of that study be applicable to humans?)\n",
+    "\n",
+    "| Lab Mouse |\n",
+    "| - |\n",
+    "| ![Lab mouse](https://speakingofresearch.files.wordpress.com/2018/04/mouse-cv.jpg?w=863) |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Confounding"
+    "To address the shortcomings of RCTs, today we will learn some causal graph theory!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Chains"
+    "### Chains\n",
+    "\n",
+    "| An example of a a chain |\n",
+    "| - |\n",
+    "| ![Middle School -> High School -> College](./img/mid-high-college.png) |\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    P(c \\mid h ) &= P(c \\mid h, m) & \\text{Once we know h, $m$ tells us nothing about $c$.} \\\\\n",
+    "    P(m \\mid h ) &= P(m \\mid h, c) & \\text{Once we know h, $c$ tells us nothing about $m$.} \\\\ \n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    C &\\perp \\!\\!\\! \\perp  M \\mid H & \\text{$C$ is independent of $M$ given $H$}\n",
+    "\\end{aligned}\n",
+    "\\end{equation}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forks"
+    "### Forks\n",
+    "\n",
+    "| An example of a fork |\n",
+    "| - |\n",
+    "| ![Age causes intelligence and shoe size](./img/age-intel-shoe-size.png) |\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    P(i \\mid a) &= P(i \\mid a, s) & \\text{Once we know $a$, $s$ tells us nothing about $i$.} \\\\\n",
+    "    P(s \\mid a) &= P(s \\mid a, i) & \\text{Once we know $a$, $i$ tells us nothing about $s$.} \\\\\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    I &\\perp \\!\\!\\! \\perp S \\mid A & \\text{$I$ is independent of $S$ given $A$.}\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Colliders"
+    "### Colliders\n",
+    "\n",
+    "| An example of a collider |\n",
+    "| - |\n",
+    "| ![SAT causes college scholarship, Musical skill also causes college scholarship](./img/sat-scholarship-musical.png) |\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    P(s) &= P(s \\mid m) & \\text{$m$ tells me nothing about $s$, if we don't know about $c$.}\\\\\n",
+    "    P(m) &= P(m \\mid s) & \\text{$s$ tells me nothing about $m$, if we don't know about $c$.} \\\\\n",
+    "    P(s) &\\neq P(s \\mid m, c) &\\text{Once we know about $c$, and $m$, then that tells us something about $s$.}\\\\\n",
+    "    P(m) &\\neq P(m \\mid s, c) & \\text{Once we know about $c$, and $s$, then that tells us something about $m$.} \\\\\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    S &\\perp\\!\\!\\!\\perp M &\\text{$S$ and $M$ are marginally independent} \\\\\n",
+    "    S & {\\not\\!\\perp\\!\\!\\!\\perp} M \\mid C &\\text{$S$ tells us about $M$, and vice versa, once we know $C$.}\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n"
    ]
   },
   {
