flesh out explanations for types of paths

--- a/intro-to-causal-inference.ipynb
+++ b/intro-to-causal-inference.ipynb
@@ -403,8 +403,14 @@
     "| - |\n",
     "| ![Middle School -> High School -> College](./img/mid-high-college.png) |\n",
     "\n",
+    "Let $c$ stand for some value of `Graduate College`, $h$ stand for some value of `Graduate High School`, and $m$ stand for some value of `Graduate Middle School`.\n",
+    "\n",
+    "The left node and the right node are associated, i.e. the path from $\\text{Graduate Middle School} \\rightarrow \\text{Graduate High School} \\rightarrow \\text{Graduate College}$ is open. However, if we condition on the middle node $\\text{Graduate High School}$ (i.e. if we know someone graduated or did not graduate, then the other nodes are no longer associated. Doing so *blocks* the path $\\text{Graduate Middle School} \\rightarrow \\text{Graduate High School} \\rightarrow \\text{Graduate College}$.\n",
+    "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
+    "    P(c) &\\neq P(c \\mid m) &\\text{$m$ tells us something about $c$} \\\\\n",
+    "    P(m) &\\neq P(m \\mid c) &\\text{$c$ tells us something about $m$} \\\\\n",
     "    P(c \\mid h ) &= P(c \\mid h, m) & \\text{Once we know h, $m$ tells us nothing about $c$.} \\\\\n",
     "    P(m \\mid h ) &= P(m \\mid h, c) & \\text{Once we know h, $c$ tells us nothing about $m$.} \\\\ \n",
     "\\end{aligned}\n",
@@ -427,8 +433,14 @@
     "| - |\n",
     "| ![Age causes intelligence and shoe size](./img/age-intel-shoe-size.png) |\n",
     "\n",
+    "Let $i$ stand for some value of `Intelligence`, $a$ for some value of `Age`, and $s$ for some value of `Shoe Size`.\n",
+    "\n",
+    "Just like in the chain example, the non-middle-nodes are associated until we know the value of the middle node. The path $\\text{Intelligence} \\leftarrow \\text{Age} \\rightarrow \\text{Shoe Size}$ is *open* and transmits information. However, if we know the `Age`, then `Intelligence` tells us nothing about `Shoe Size` and vice versa. In other words, conditioning on `Age` blocks the path $\\text{Intelligence} \\leftarrow \\text{Age} \\rightarrow \\text{Shoe Size}$.\n",
+    "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
+    "    P(i) &\\neq P(i \\mid s) & \\text{$s$ tells us something about $i$.} \\\\\n",
+    "    P(s) &\\neq P(s \\mid i) & \\text{$i$ tells us something about $s$.} \\\\\n",
     "    P(i \\mid a) &= P(i \\mid a, s) & \\text{Once we know $a$, $s$ tells us nothing about $i$.} \\\\\n",
     "    P(s \\mid a) &= P(s \\mid a, i) & \\text{Once we know $a$, $i$ tells us nothing about $s$.} \\\\\n",
     "\\end{aligned}\n",
@@ -450,6 +462,10 @@
     "| An example of a collider |\n",
     "| - |\n",
     "| ![SAT causes college scholarship, Musical skill also causes college scholarship](./img/sat-scholarship-musical.png) |\n",
+    "\n",
+    "Let $s$ stand for some value of `SAT score`, $m$ for some value of `Musical Skill` , and $c$ for some value of `College Scholarship`.\n",
+    "\n",
+    "`Musical Skill` is independent of `SAT score` in the general population. In other words, the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$ is blocked if we don't know the value of `College Scholarship`. However, if we know that someone has a college scholarship and they have low `Musical Skill`, then they are more likely to have a high `SAT score`. In other words, conditioning on the value of `College Scholarship` opens the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$.\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
@@ -474,7 +490,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Descendants of Colliders"
+    "### Descendants of Colliders\n",
+    "\n",
+    "| Student Debt is a descendant of a collider | \n",
+    "| - |\n",
+    "| <img alt=\"Student Debt listens to College Scholarship\" src=\"./img/desc-collider.png\" width=500> |\n",
+    "\n",
+    "Let $s$ stand for some value of `SAT score`, $m$ for some value of `Musical Skill`, $c$ for some value of `College Scholarship`, and $d$ for some value of `Student Debt`.\n",
+    "\n",
+    "Again, like in the collider example above `SAT score` and `Musical Skill` are independent of each other in the general population. However, if we know the value of the descendant of a collider, `Student Debt in the first month of freshman year` then `SAT score` and `Musical Skill` become dependent. In other words, conditioning on a descendant of a collider opens the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    P(s) &= P(s \\mid m) & \\text{$m$ tells me nothing about $s$, if we don't know about $c$.}\\\\\n",
+    "    P(m) &= P(m \\mid s) & \\text{$s$ tells me nothing about $m$, if we don't know about $c$.} \\\\\n",
+    "    P(s) &\\neq P(s \\mid m, d) &\\text{Once we know about $d$, then knowing $m$ tells us something about $s$.}\\\\\n",
+    "    P(m) &\\neq P(m \\mid s, d) & \\text{Once we know about $d$, then knowing $s$ tells us something about $m$.} \\\\\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    S &\\perp\\!\\!\\!\\perp M &\\text{$S$ and $M$ are marginally independent} \\\\\n",
+    "    S & {\\not\\!\\perp\\!\\!\\!\\perp} M \\mid D &\\text{$S$ tells us about $M$, and vice versa, once we know $D$.}\n",
+    "\\end{aligned}\n",
+    "\\end{equation}"
    ]
   },
   {
