--- a/intro-to-ci-part-1.ipynb
+++ b/intro-to-ci-part-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Causal Inference"
+    "# Introduction to Causal Inference: Part 1"
    ]
   },
   {
@@ -454,7 +454,7 @@
     "| - |\n",
     "| ![Middle School -> High School -> College](./img/mid-high-college.png) |\n",
     "\n",
-    "Let $c$ stand for some value of `Graduate College`, $h$ stand for some value of `Graduate High School`, and $m$ stand for some value of `Graduate Middle School`.\n",
+    "Let $c$ stand for some value of $\\text{Graduate College}$, $h$ stand for some value of $\\text{Graduate High School}$, and $m$ stand for some value of $\\text{Graduate Middle School}$.\n",
     "\n",
     "The left node and the right node are associated, i.e. the path from $\\text{Graduate Middle School} \\rightarrow \\text{Graduate High School} \\rightarrow \\text{Graduate College}$ is open. However, if we condition on the middle node $\\text{Graduate High School}$ (i.e. if we know someone graduated or did not graduate, then the other nodes are no longer associated. Doing so *blocks* the path $\\text{Graduate Middle School} \\rightarrow \\text{Graduate High School} \\rightarrow \\text{Graduate College}$.\n",
     "\n",
@@ -484,9 +484,9 @@
     "| - |\n",
     "| ![Age causes intelligence and shoe size](./img/age-intel-shoe-size.png) |\n",
     "\n",
-    "Let $i$ stand for some value of `Intelligence`, $a$ for some value of `Age`, and $s$ for some value of `Shoe Size`.\n",
+    "Let $i$ stand for some value of $\\text{Intelligence}$, $a$ for some value of $\\text{Age}$, and $s$ for some value of $\\text{Shoe Size}$.\n",
     "\n",
-    "Just like in the chain example, the non-middle-nodes are associated until we know the value of the middle node. The path $\\text{Intelligence} \\leftarrow \\text{Age} \\rightarrow \\text{Shoe Size}$ is *open* and transmits information. However, if we know the `Age`, then `Intelligence` tells us nothing about `Shoe Size` and vice versa. In other words, conditioning on `Age` blocks the path $\\text{Intelligence} \\leftarrow \\text{Age} \\rightarrow \\text{Shoe Size}$.\n",
+    "Just like in the chain example, the non-middle-nodes are associated until we know the value of the middle node. The path $\\text{Intelligence} \\leftarrow \\text{Age} \\rightarrow \\text{Shoe Size}$ is *open* and transmits information. However, if we know the $\\text{Age}$, then $\\text{Intelligence}$ tells us nothing about $\\text{Shoe Size}$ and vice versa. In other words, conditioning on $\\text{Age}$ blocks the path $\\text{Intelligence} \\leftarrow \\text{Age} \\rightarrow \\text{Shoe Size}$.\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
@@ -514,9 +514,9 @@
     "| - |\n",
     "| ![SAT causes college scholarship, Musical skill also causes college scholarship](./img/sat-scholarship-musical.png) |\n",
     "\n",
-    "Let $s$ stand for some value of `SAT score`, $m$ for some value of `Musical Skill` , and $c$ for some value of `College Scholarship`.\n",
+    "Let $s$ stand for some value of $\\text{SAT score}$, $m$ for some value of $\\text{Musical Skill}$ , and $c$ for some value of $\\text{College Scholarship}$.\n",
     "\n",
-    "`Musical Skill` is independent of `SAT score` in the general population. In other words, the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$ is blocked if we don't know the value of `College Scholarship`. However, if we know that someone has a college scholarship and they have low `Musical Skill`, then they are more likely to have a high `SAT score`. In other words, conditioning on the value of `College Scholarship` opens the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$\n",
+    "$\\text{Musical Skill}$ is independent of $\\text{SAT score}$ in the general population. In other words, the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$ is blocked if we don't know the value of $\\text{College Scholarship}$. However, if we know that someone has a college scholarship and they have low $\\text{Musical Skill}$, then they are more likely to have a high $\\text{SAT score}$. In other words, conditioning on the value of $\\text{College Scholarship}$ opens the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
@@ -547,9 +547,9 @@
     "| - |\n",
     "| <img alt=\"Student Debt listens to College Scholarship\" src=\"./img/desc-collider.png\" width=500> |\n",
     "\n",
-    "Let $s$ stand for some value of `SAT score`, $m$ for some value of `Musical Skill`, $c$ for some value of `College Scholarship`, and $d$ for some value of `Student Debt`.\n",
+    "Let $s$ stand for some value of $\\text{SAT score}$, $m$ for some value of $\\text{Musical Skill}$, $c$ for some value of $\\text{College Scholarship}$, and $d$ for some value of $\\text{Student Debt}$.\n",
     "\n",
-    "Again, like in the collider example above `SAT score` and `Musical Skill` are independent of each other in the general population. However, if we know the value of the descendant of a collider, `Student Debt in the first month of freshman year` then `SAT score` and `Musical Skill` become dependent. In other words, conditioning on a descendant of a collider opens the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$.\n",
+    "Again, like in the collider example above $\\text{SAT score}$ and $\\text{Musical Skill}$ are independent of each other in the general population. However, if we know the value of the descendant of a collider, $\\text{Student Debt}$ then $\\text{SAT score}$ and $\\text{Musical Skill}$ become dependent. In other words, conditioning on a descendant of a collider opens the path $\\text{SAT score} \\rightarrow \\text{College Scholarship} \\leftarrow \\text{Musical Skill}$.\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
