add to explanations

--- a/intro-to-ci-part-1.ipynb
+++ b/intro-to-ci-part-1.ipynb
@@ -574,7 +574,7 @@
    "source": [
     "### Backdoor Criterion\n",
     "\n",
-    "When analyzing the effect of some treatment on an outcome using observational data, we need to *block all backdoor paths* that transmit information in a non-causal way. Once we do that (without conditioning on mediators), we can find the total average effect of treatment on the outcome, sometimes for certain subgroups, and sometimes for the whole population."
+    "When analyzing the effect of some treatment on an outcome using observational data, we need to *block all backdoor paths* that transmit information in a non-causal way. Once we do that (without conditioning on mediators), we can find the total average effect of treatment on the outcome, sometimes for certain subgroups, and sometimes for the whole population, as we'll see below."
    ]
   },
   {
